alert on sign up no longer covers sign up button

--- a/app/assets/stylesheets/devise/register.scss
+++ b/app/assets/stylesheets/devise/register.scss
@@ -30,3 +30,8 @@
 .form-actions {
   text-align: center;
 }
+
+.alert.alert-danger {
+  // top: 16px !important;
+  bottom: calc(100vh - 125px);
+}
